fix: Modal and Tooltip z-index, Pagination page change

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -11,7 +11,7 @@
     left: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.7);
-    z-index: 999;
+    z-index: 50;
     display: flex;
     justify-content: center;
     overflow-y: auto;
