--- a/src/components/Tooltip/Tooltip.scss
+++ b/src/components/Tooltip/Tooltip.scss
@@ -6,7 +6,7 @@
     white-space: pre-line;
     background-color: var(--color-secondary-500);
     border-radius: 2px;
-    z-index: 50;
+    z-index: 100;
     line-height: 22px;
     color: var(--color-additional-light);
 
